Fix archives support in attachments

The API of gnome-autoar was recently modified so compression and extraction
were no longer working. Replace autoar preferences objects with two shell
settings. Save memory file to disk before extracting it. Handle generation of
unique file names internally.

https://bugzilla.gnome.org/show_bug.cgi?id=770380